@startuml

title __SPECIALENTITIES's Class Diagram__\n

  namespace SpecialEntities {
    class SpecialEntities.BrickWithSpeedUp {
        + BrickWithSpeedUp()
        + die()
        + render()
        + update()
    }
  }
  

  namespace SpecialEntities {
    class SpecialEntities.FireBoost {
        + FireBoost()
        + render()
        + update()
    }
  }
  

  namespace SpecialEntities {
    class SpecialEntities.NextLevelEntity {
        + NextLevelEntity()
        + render()
        + update()
    }
  }
  

  namespace SpecialEntities {
    abstract class SpecialEntities.SpecialEntity {
        # active : boolean
        # bounds : Rectangle
        # height : int
        # width : int
        # x : float
        # y : float
        + SpecialEntity()
        + getCollisionBounds()
        + isActive()
        {abstract} + render()
        + setActive()
        {abstract} + update()
    }
  }
  

  namespace SpecialEntities {
    class SpecialEntities.SpecialEntityManager {
        {static} - specialEntities : ArrayList<SpecialEntity>
        + SpecialEntityManager()
        + addSpecialEntity()
        {static} + getSpecialEntities()
        + render()
        + update()
    }
  }
  

  namespace SpecialEntities {
    class SpecialEntities.SpeedUpBoost {
        + SpeedUpBoost()
        + checkCollisionWithPlayer()
        + render()
        + update()
    }
  }
  

  SpecialEntities.BrickWithSpeedUp -up-|> entities.StaticEntity
  SpecialEntities.FireBoost -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.NextLevelEntity -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.SpecialEntity o-- DynaBlaster.Handler : handler
  SpecialEntities.SpecialEntityManager o-- DynaBlaster.Handler : handler
  SpecialEntities.SpeedUpBoost -up-|> SpecialEntities.SpecialEntity
  SpecialEntities.SpeedUpBoost o-- entities.Player : player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
